[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezviz-openapi-utils"
version = "0.3.2"
authors = [
  { name="SunBo", email="1443584939@qq.com" },
]
description = "A Python library for the EZVIZ OpenAPI platform, handling authentication and API requests."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/sunbos/ezviz-openapi-utils"
"Bug Tracker" = "https://github.com/sunbos/ezviz-openapi-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]


